Bug 1137583 - Fix for CV-qualified pointers; Added tests. r=waldo